--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/Code Journey/v17
+/.vs/Code Journey/FileContentIndex
