--- a/Learning Code.vcxproj
+++ b/Learning Code.vcxproj
@@ -19,11 +19,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <VCProjectVersion>16.0</VCProjectVersion>
+    <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{b05a7c59-364d-4d53-a7da-6be584d34896}</ProjectGuid>
-    <RootNamespace>TomKannenbergCpp</RootNamespace>
+    <ProjectGuid>{1861b65a-0f54-478b-9255-17ddd0e7afa3}</ProjectGuid>
+    <RootNamespace>LearningCode</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Code Journey</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -91,7 +92,6 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -121,7 +121,6 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -131,10 +130,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CodeJourney.cpp" />
     <ClCompile Include="TKCursor\TKCursor.cpp" />
     <ClCompile Include="TKMenu\TKMenu.cpp" />
     <ClCompile Include="TKUtility\TKUtility.cpp" />
-    <ClCompile Include="TomKannenbergCpp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TKCursor\TKCursor.h" />
